--- a/.eslintrc
+++ b/.eslintrc
@@ -9,8 +9,8 @@
   },
   "parser": "babel-eslint",
   "rules": {
-    "quotes": [2, "single"],
-    "strict": [2, "never"],
+    "quotes": [2, "double"],
+    "strict": 0,
     "react/jsx-uses-react": 2,
     "react/jsx-uses-vars": 2,
     "react/react-in-jsx-scope": 2
