--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
     "sourceMap": true
   },
   "include": [
-    "src/**/*"
+    "declaration.d.ts",
+    "src/**/*",
+    "server.ts"
   ],
   "exclude": [
     "node_modules"
