--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "apollo-client": "^0.4.20",
     "graphql-tag": "^0.1.14",
+    "moment": "^2.17.1",
     "react": "^15.0.1",
     "react-apollo": "^0.5.8",
     "react-bootstrap": "^0.30.5",
