Unique name for entry point to identify via ps, etc.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
   "include": [
     "declaration.d.ts",
     "src/**/*",
-    "server.ts"
+    "pipelineWorkerClientServer.ts"
   ],
   "exclude": [
     "node_modules"
