--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^15.0.1",
     "react-apollo": "^0.5.8",
     "react-bootstrap": "^0.30.5",
+    "react-bootstrap-slider": "^1.1.4",
     "react-dom": "^15.0.1",
     "react-fontawesome": "^1.5.0",
     "react-tap-event-plugin": "^1.0.0",
