--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mouse-dashboard-worker-client",
+  "name": "ml-pipeline-worker-client",
   "version": "0.1.0",
   "description": "",
   "scripts": {
@@ -11,43 +11,25 @@
   "author": "Patrick Edson <pedson@leapscientific.com> (http://github.com/pedson)",
   "license": "Janelia",
   "devDependencies": {
-    "@types/chai": "^3.4.34",
-    "@types/express-serve-static-core": "^4.0.37",
-    "@types/isomorphic-fetch": "0.0.31",
-    "@types/react": "^0.14.41",
-    "@types/react-bootstrap": "0.0.33",
-    "@types/react-dom": "^0.14.17",
+    "@types/react": "^15.0.31",
+    "@types/react-bootstrap": "^0.0.51",
+    "@types/react-dom": "^15.5.1",
     "@types/react-fontawesome": "^1.5.0",
-    "@types/serve-static": "^1.7.31",
-    "@types/webpack": "^1.12.35",
-    "@types/webpack-dev-server": "^1.12.1",
-    "babel-core": "^6.0.20",
-    "babel-eslint": "^4.1.3",
-    "babel-loader": "^6.0.1",
-    "babel-polyfill": "^6.22.0",
-    "babel-preset-es2015": "^6.0.15",
-    "babel-preset-react": "^6.0.15",
-    "babel-preset-stage-0": "^6.0.15",
-    "classnames": "^2.2.5",
-    "eslint": "^1.10.3",
-    "eslint-plugin-react": "^3.6.2",
-    "ts-loader": "^0.9.1",
-    "typed-graphql": "^1.0.2",
-    "typescript": "~2.1.6",
-    "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.1"
+    "@types/webpack": "2.2.6",
+    "@types/webpack-dev-server": "^2.4.0"
   },
   "dependencies": {
-    "apollo-client": "^0.4.20",
-    "graphql-tag": "^0.1.14",
+    "graphql": "^0.10.3",
+    "graphql-tag": "^2.4.2",
     "moment": "^2.17.1",
-    "react": "^15.0.1",
-    "react-apollo": "^0.5.8",
-    "react-bootstrap": "^0.30.5",
-    "react-bootstrap-slider": "^1.1.4",
-    "react-dom": "^15.0.1",
+    "react": "^15.6.1",
+    "react-apollo": "1.2.0",
+    "react-bootstrap": "^0.31.0",
+    "react-dom": "^15.6.1",
     "react-fontawesome": "^1.5.0",
-    "react-tap-event-plugin": "^1.0.0",
-    "subscriptions-transport-ws": "^0.2.5"
+    "ts-loader": "^2.2.0",
+    "typescript": "^2.3.4",
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.5.0"
   }
 }
