--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "",
   "scripts": {
-    "dev": "DEBUG=mouselight* node $NODE_DEBUG_OPTION src/pipelineWorkerClientServer.js",
+    "dev": "DEBUG=pipeline* node $NODE_DEBUG_OPTION src/pipelineWorkerClientServer.js",
     "start": "node src/pipelineWorkerClientServer.js",
     "lint": "eslint src"
   },
