--- a/package.json
+++ b/package.json
@@ -5,36 +5,45 @@
   "keywords": [],
   "author": "Patrick Edson <pedson@leapscientific.com> (http://github.com/pedson)",
   "license": "LicenseRef-LICENSE",
-  "dockerImageName": "worker-client",
   "dockerRepository": "mouselightpipeline",
+  "dockerImageName": "worker-client",
   "scripts": {
-    "devel": "DEBUG=pipeline* node $NODE_DEBUG_OPTION src/pipelineWorkerClientServer.js",
-    "start": "node src/pipelineWorkerClientServer.js",
-    "docker-build": "gulp docker-build",
-    "docker-release": "gulp docker-release"
+    "devel": "DEBUG=pipeline* node $NODE_DEBUG_OPTION server/pipelineWorkerClientServer.js",
+    "start": "node server/pipelineWorkerClientServer.js",
+    "docker-build": "webpack && gulp docker-build",
+    "release": "webpack && gulp release"
   },
   "dependencies": {
+    "express": "^4.16.2",
+    "express-http-proxy": "^1.1.0",
     "graphql": "^0.10.3",
     "graphql-tag": "^2.4.2",
     "moment": "^2.17.1",
-    "react": "^15.6.1",
+    "react": "^16.2.0",
     "react-apollo": "1.2.0",
-    "react-bootstrap": "^0.31.0",
-    "react-dom": "^15.6.1",
-    "react-fontawesome": "^1.5.0",
-    "ts-loader": "^2.2.0",
-    "typescript": "^2.3.4",
-    "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.5.0"
+    "react-bootstrap": "^0.31.5",
+    "react-dom": "^16.2.0",
+    "react-fontawesome": "^1.5.0"
   },
   "devDependencies": {
-    "@types/react": "^15.0.31",
-    "@types/react-bootstrap": "^0.0.51",
-    "@types/react-dom": "^15.5.1",
+    "@types/express": "^4.0.39",
+    "@types/node": "^8.0.54",
+    "@types/react": "^16.0.27",
+    "@types/react-bootstrap": "^0.31.8",
+    "@types/react-dom": "^16.0.3",
     "@types/react-fontawesome": "^1.5.0",
-    "@types/webpack": "2.2.6",
+    "@types/webpack": "^2.2.6",
     "@types/webpack-dev-server": "^2.4.0",
+    "css-loader": "^0.28.4",
+    "file-loader": "^1.1.5",
     "gulp": "^3.9.1",
-    "gulp-shell": "^0.6.3"
+    "gulp-shell": "^0.6.3",
+    "style-loader": "^0.18.2",
+    "ts-loader": "^2.2.0",
+    "typescript": "2.4.2",
+    "uglifyjs-webpack-plugin": "^1.0.1",
+    "url-loader": "^0.6.2",
+    "webpack": "2.7.0",
+    "webpack-dev-server": "^2.5.0"
   }
 }
